tests/src/snapshots/pluma_tests__parse_success__string_escape_tab.snap
---
source: tests/src/parse_success.rs
expression: "\"hello\\tworld\""
---

=== Source ===
"hello\tworld"

=== Tokens ===
[
    StringLiteral(
        1,
        13,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        1,
        13,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                1,
                13,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        1,
                        13,
                    ),
                    kind: Literal(
                        LiteralNode {
                            pos: (
                                1,
                                13,
                            ),
                            kind: Str(
                                "hello\tworld",
                            ),
                            typ: Unknown,
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

