tests/src/snapshots/pluma_tests__parse_success__tuple_multiple_elements.snap
---
source: tests/src/parse_success.rs
expression: "(1, \"wow\", { x => x }, (lol, ()))"
---

=== Source ===
(1, "wow", { x => x }, (lol, ()))

=== Tokens ===
[
    LeftParen(
        0,
        1,
    ),
    DecimalDigits(
        1,
        2,
    ),
    Comma(
        2,
        3,
    ),
    StringLiteral(
        5,
        8,
    ),
    Comma(
        9,
        10,
    ),
    LeftBrace(
        11,
        12,
    ),
    Identifier(
        13,
        14,
    ),
    DoubleArrow(
        15,
        17,
    ),
    Identifier(
        18,
        19,
    ),
    RightBrace(
        20,
        21,
    ),
    Comma(
        21,
        22,
    ),
    LeftParen(
        23,
        24,
    ),
    Identifier(
        24,
        27,
    ),
    Comma(
        27,
        28,
    ),
    LeftParen(
        29,
        30,
    ),
    RightParen(
        30,
        31,
    ),
    RightParen(
        31,
        32,
    ),
    RightParen(
        32,
        33,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        33,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                33,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        33,
                    ),
                    kind: Tuple(
                        [
                            ExprNode {
                                pos: (
                                    1,
                                    2,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            1,
                                            2,
                                        ),
                                        kind: IntDecimal(
                                            1,
                                        ),
                                        typ: Unknown,
                                    },
                                ),
                                typ: Unknown,
                            },
                            ExprNode {
                                pos: (
                                    5,
                                    8,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            5,
                                            8,
                                        ),
                                        kind: Str(
                                            "wow",
                                        ),
                                        typ: Unknown,
                                    },
                                ),
                                typ: Unknown,
                            },
                            ExprNode {
                                pos: (
                                    11,
                                    21,
                                ),
                                kind: Block {
                                    params: [
                                        IdentifierNode {
                                            pos: (
                                                13,
                                                14,
                                            ),
                                            name: "x",
                                        },
                                    ],
                                    body: [
                                        StatementNode {
                                            pos: (
                                                18,
                                                19,
                                            ),
                                            kind: Expr(
                                                ExprNode {
                                                    pos: (
                                                        18,
                                                        19,
                                                    ),
                                                    kind: Identifier(
                                                        IdentifierNode {
                                                            pos: (
                                                                18,
                                                                19,
                                                            ),
                                                            name: "x",
                                                        },
                                                    ),
                                                    typ: Unknown,
                                                },
                                            ),
                                        },
                                    ],
                                },
                                typ: Unknown,
                            },
                            ExprNode {
                                pos: (
                                    23,
                                    32,
                                ),
                                kind: Tuple(
                                    [
                                        ExprNode {
                                            pos: (
                                                24,
                                                27,
                                            ),
                                            kind: Identifier(
                                                IdentifierNode {
                                                    pos: (
                                                        24,
                                                        27,
                                                    ),
                                                    name: "lol",
                                                },
                                            ),
                                            typ: Unknown,
                                        },
                                        ExprNode {
                                            pos: (
                                                29,
                                                31,
                                            ),
                                            kind: EmptyTuple,
                                            typ: Unknown,
                                        },
                                    ],
                                ),
                                typ: Unknown,
                            },
                        ],
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

