tests/src/snapshots/pluma_tests__parse_success__tuple_two_elements.snap
---
source: tests/src/parse_success.rs
expression: "(1, \"wow\")"
---

=== Source ===
(1, "wow")

=== Tokens ===
[
    LeftParen(
        0,
        1,
    ),
    DecimalDigits(
        1,
        2,
    ),
    Comma(
        2,
        3,
    ),
    StringLiteral(
        5,
        8,
    ),
    RightParen(
        9,
        10,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        10,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                10,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        10,
                    ),
                    kind: Tuple(
                        [
                            ExprNode {
                                pos: (
                                    1,
                                    2,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            1,
                                            2,
                                        ),
                                        kind: IntDecimal(
                                            1,
                                        ),
                                        typ: None,
                                    },
                                ),
                                typ: None,
                            },
                            ExprNode {
                                pos: (
                                    5,
                                    8,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            5,
                                            8,
                                        ),
                                        kind: Str(
                                            "wow",
                                        ),
                                        typ: None,
                                    },
                                ),
                                typ: None,
                            },
                        ],
                    ),
                    typ: None,
                },
            ),
        },
    ],
}

