tests/src/snapshots/pluma_tests__parse_success__type_alias_across_lines.snap
---
source: tests/src/parse_success.rs
expression: "alias Alpha\n  Beta"
---

=== Source ===
alias Alpha
  Beta

=== Tokens ===
[
    KeywordAlias(
        0,
        5,
    ),
    Identifier(
        6,
        11,
    ),
    LineBreak(
        11,
        12,
    ),
    Identifier(
        14,
        18,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        18,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                18,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        18,
                    ),
                    kind: Alias {
                        of: TypeExprNode {
                            pos: (
                                14,
                                18,
                            ),
                            kind: Single(
                                TypeIdentifierNode {
                                    pos: (
                                        14,
                                        18,
                                    ),
                                    name: IdentifierNode {
                                        pos: (
                                            14,
                                            18,
                                        ),
                                        name: "Beta",
                                        typ: Unknown,
                                    },
                                    generics: [],
                                },
                            ),
                        },
                    },
                    name: TypeIdentifierNode {
                        pos: (
                            6,
                            11,
                        ),
                        name: IdentifierNode {
                            pos: (
                                6,
                                11,
                            ),
                            name: "Alpha",
                            typ: Unknown,
                        },
                        generics: [],
                    },
                    generic_type_constraints: [],
                },
            ),
        },
    ],
}

